--- a/LogiTry1/packages.config
+++ b/LogiTry1/packages.config
@@ -5,4 +5,5 @@
   <package id="System.Memory" version="4.5.4" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net46" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net46" />
+  <package id="Tulpep.NotificationWindow" version="1.1.37" targetFramework="net46" />
 </packages>
